--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       # This is so you can go to localhost:3000 like you're used to. Otherwise, a port would be randomly mapped.
       - "3000:3000"
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    #command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       # This will mount your "gems" volume (defined below as your external gem volumes) onto /gems
       - gems:/gems
