--- a/config/database.yml
+++ b/config/database.yml
@@ -1,27 +1,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: 5
-  timeout: 5000
-
-development:
-  adapter: postgresql
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  password: <%= ENV['DB_PASSWORD'] %>иии
+  pool: 5
+
+development:
+  <<: *default
   database: <%= ENV['DB_NAME'] %>
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: my-app-test
-  username: myapp
-  password: password1
-
-production:
-  <<: *default
-  database: my-app
-  username: dbuser
-  password: password123
+  database: myapp_test
